test/fixtures/errors/identity-loader.js
/** @type {import("../../../../").LoaderDefinition} */
module.exports = function (source) {
	return source;
};
